QQmlProperty: Accept badly capitalized signal handler names

... but warn about them. Apparently we did accept them prior to 6.4.

Fixes: QTBUG-116576
Pick-to: 6.5 6.6
Change-Id: If890db85f5a8d71c0bcdfaf646ee9f01765a0b3c
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>